@@ -1,129 +1,132 @@
 package com.rishanth.flux360.controller;
 
 import com.rishanth.flux360.dto.ExpenseDTO;
-import com.rishanth.flux360.model.Expense;
-import com.rishanth.flux360.model.User;
+import com.rishanth.flux360.mapper.ExpenseMapper;
+import com.rishanth.flux360.entity.User;
 import com.rishanth.flux360.service.ExpenseService;
 import com.rishanth.flux360.service.UserService;
+import jakarta.validation.Valid;
+import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.*;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/expenses")
-@CrossOrigin(origins = "*")
+@RequiredArgsConstructor
+@PreAuthorize("hasRole('USER')")
 public class ExpenseController {
 
     private final ExpenseService service;
     private final UserService userService;
 
-    public ExpenseController(ExpenseService service, UserService userService) {
-        this.service = service;
-        this.userService = userService;
-    }
-
-    // CREATE
     @PostMapping
-    public ExpenseDTO addExpense(@RequestBody ExpenseDTO dto,
-                                 Authentication authentication) {
+    public ResponseEntity<ExpenseDTO> addExpense(
+            @Valid @RequestBody ExpenseDTO dto,
+            Authentication authentication
+    ) {
 
-        String username = authentication.getName();
-        User user = userService.findByEmail(username);
+        User user = getCurrentUser(authentication);
 
-        Expense expense = mapToEntity(dto);
-        expense.setUser(user);
-
-        Expense saved = service.saveExpense(expense);
-        return mapToDTO(saved);
+        return ResponseEntity
+                .status(HttpStatus.CREATED)
+                .body(
+                        ExpenseMapper.toDTO(
+                                service.saveExpense(dto, user)
+                        )
+                );
     }
 
-    // GET ALL
     @GetMapping
-    public List<ExpenseDTO> getExpenses(Authentication authentication) {
+    public ResponseEntity<List<ExpenseDTO>> getExpenses(
+            Authentication authentication
+    ) {
 
-        String username = authentication.getName();
-        User user = userService.findByEmail(username);
+        User user = getCurrentUser(authentication);
 
-        return service.getExpensesByUser(user)
+        List<ExpenseDTO> expenses = service
+                .getExpensesByUser(user)
                 .stream()
-                .map(this::mapToDTO)
-                .collect(Collectors.toList());
+                .map(ExpenseMapper::toDTO)
+                .toList();
+
+        return ResponseEntity.ok(expenses);
     }
 
-    // TOTAL EXPENSE
     @GetMapping("/total")
-    public BigDecimal getTotal(Authentication authentication) {
+    public ResponseEntity<BigDecimal> getTotal(
+            Authentication authentication
+    ) {
 
-        String username = authentication.getName();
-        User user = userService.findByEmail(username);
+        User user = getCurrentUser(authentication);
 
-        return service.getTotalExpense(user.getId());
+        return ResponseEntity.ok(
+                service.getTotalExpense(user.getId())
+        );
     }
 
-    // UPDATE
     @PutMapping("/{id}")
-    public ExpenseDTO updateExpense(@PathVariable Long id,
-                                    @RequestBody ExpenseDTO dto,
-                                    Authentication authentication) {
+    public ResponseEntity<ExpenseDTO> updateExpense(
+            @PathVariable Long id,
+            @Valid @RequestBody ExpenseDTO dto,
+            Authentication authentication
+    ) {
 
-        String username = authentication.getName();
-        User user = userService.findByEmail(username);
+        User user = getCurrentUser(authentication);
 
-        Expense expense = mapToEntity(dto);
-        expense.setUser(user);
-
-        Expense updated = service.updateExpense(id, expense);
-        return mapToDTO(updated);
+        return ResponseEntity.ok(
+                ExpenseMapper.toDTO(
+                        service.updateExpense(id, dto, user)
+                )
+        );
     }
 
-    // DELETE
     @DeleteMapping("/{id}")
-    public void deleteExpense(@PathVariable Long id) {
-        service.deleteExpense(id);
+    public ResponseEntity<Void> deleteExpense(
+            @PathVariable Long id,
+            Authentication authentication
+    ) {
+
+        User user = getCurrentUser(authentication);
+
+        service.deleteExpense(id, user);
+
+        return ResponseEntity.noContent().build();
     }
 
-    // FILTER BY MONTH
     @GetMapping("/filter")
-    public List<ExpenseDTO> getExpensesByMonth(
+    public ResponseEntity<List<ExpenseDTO>> getExpensesByMonth(
             @RequestParam int year,
             @RequestParam int month,
-            Authentication authentication) {
+            Authentication authentication
+    ) {
 
-        String username = authentication.getName();
-        User user = userService.findByEmail(username);
+        if (month < 1 || month > 12) {
+            throw new IllegalArgumentException("Invalid month");
+        }
+
+        User user = getCurrentUser(authentication);
 
         LocalDate start = LocalDate.of(year, month, 1);
         LocalDate end = start.withDayOfMonth(start.lengthOfMonth());
 
-        return service.getByDateRange(user, start, end)
+        List<ExpenseDTO> expenses = service
+                .getByDateRange(user, start, end)
                 .stream()
-                .map(this::mapToDTO)
-                .collect(Collectors.toList());
+                .map(ExpenseMapper::toDTO)
+                .toList();
+
+        return ResponseEntity.ok(expenses);
     }
 
-    // DTO MAPPERS
+    private User getCurrentUser(Authentication authentication) {
 
-    private ExpenseDTO mapToDTO(Expense expense) {
-        ExpenseDTO dto = new ExpenseDTO();
-        dto.setId(expense.getId());
-        dto.setCategory(expense.getCategory());
-        dto.setAmount(expense.getAmount());
-        dto.setExpenseDate(expense.getExpenseDate());
-        dto.setDescription(expense.getDescription());
-        return dto;
-    }
-
-    private Expense mapToEntity(ExpenseDTO dto) {
-        Expense expense = new Expense();
-        expense.setId(dto.getId());
-        expense.setCategory(dto.getCategory());
-        expense.setAmount(dto.getAmount());
-        expense.setExpenseDate(dto.getExpenseDate());
-        expense.setDescription(dto.getDescription());
-        return expense;
+        return userService.findByEmail(authentication.getName());
     }
 }
